# dyz

./: .gitignore  Makefile  README.md  autogen.sh  build  configure  configure.ac  dyz.lua  launch
src/: Makefile  Makefile.in  dyz.c  entrypoint.lua  loader.c  main.c  main.lua  wlglue.cpp  wlglue.lua  x11host.cpp  x11host.lua
src/apps/fdo/: main.lua
src/apps/singleview/: main.lua
src/lib/: drm.lua  egl.lua  gbm.lua  glib.lua  libc.lua  wpe.lua  wpebackend-fdo.lua  wpebackend.lua  wpebackend_fdo.lua  wpewebkit.lua  wpewebkit_capi.lua  wpewebkit_glibapi.lua
src/wpe/: loader.c
